<resources>
    <string name="app_name">List Mate</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="username">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="other_login_options">or continue with</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="background_image">Background Image</string>
    <string name="reset_password">Reset</string>
    <string name="new_user">New user?</string>
    <string name="title_activity_user_home">UserHomeActivity</string>

    <!--  Facebook login  -->
    <string name="facebook_app_id">3599703690244470</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>